--- a/css/bacon.css
+++ b/css/bacon.css
@@ -2,12 +2,14 @@ h1{
     color: red;
     font-size: 100px;
 }
-/* img{
-    background-color: red;
-} */
+img:hover{
+    background-color: gold;
+}
 .bacon{
     background-color: green;
 }
 .broccoli{
     background-color: red;
+    border-radius: 50%;
+    padding: 5px;
 }
