--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,14 @@ body{
 }
 h1{
   margin-top:0;
-  font-size: 10rem;
-  line-height: 2;
+  font-size: 5rem;
   font-family: 'Times New Roman', Times, serif;
   color: #66BFBF;
 }
 h2{
   font-family: 'Merriweather', serif;
   color: #66BFBF;
+  font-size: 45px;
 }
 h3{
   font-family: 'Merriweather', serif;
@@ -22,34 +22,85 @@ h3{
 a {
   color: #11999E;
 }
-p{
-  text-align: center;
+hr {
+  border-top: dotted 6px;
+  width: 45px; 
+  color: #EAF6F6 ; 
+  margin: auto;
 }
 .top-container{
   background-color: #E4F9F5;
   position: relative;
   padding-top: 100px;
+  font-size: 2rem;
+  color: #66BFBF;
+}
+.bottom-container{
+  background-color: #66BFBF;
+}
+.profile{
+  color: #40514E;
 }
 #me{
-  width: 200px;
-  height: 250px;
+  width: 12%;
   border-radius: 50%;
-}
-#bottom-cloud{
-  position: absolute;
-  left: 300px;
-  bottom: 300px;
+  border: solid 2px #66BFBF;
 }
 #top_cloud{
   position: absolute;
   right: 300px;
   top: 50px;
 }
-.penguin, .www {
-  width: 100px;
-  height: 100px;
+#bottom-cloud{
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
+
 .skill-row{
-  display: inline-block;
-  padding: 10px;
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+  color: #40514E;
+}
+.penguin{
+  width: 25%;
+  float: left;
+  
+}
+.www{
+  width: 25%;
+  float: right;
+}
+.copywrite{
+  color: #EAF6f6;
+}
+.contact-me{
+  margin: 1px auto 50px auto;
+  line-height: 2;
+}
+.btn {
+  -webkit-border-radius: 11;
+  -moz-border-radius: 11;
+  border-radius: 11px;
+  -webkit-box-shadow: 5px 5px 9px #666666;
+  -moz-box-shadow: 5px 5px 9px #666666;
+  box-shadow: 5px 5px 9px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #11999E;
+  padding: 9px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
