--- a/css/styles.css
+++ b/css/styles.css
@@ -1,85 +1,102 @@
-body{
-  margin:0;
+body {
+  margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
 }
-h1{
-  margin-top:0;
+
+h1 {
+  margin-top: 0;
   font-size: 5rem;
   font-family: 'Times New Roman', Times, serif;
   color: #66BFBF;
 }
-h2{
+
+h2 {
   font-family: 'Merriweather', serif;
   color: #66BFBF;
   font-size: 45px;
 }
-h3{
+
+h3 {
   font-family: 'Merriweather', serif;
   font-weight: normal;
   color: #11999E;
 }
+
 a {
   color: #11999E;
 }
+
 hr {
-  border-top: dotted 6px;
-  width: 45px; 
-  color: #EAF6F6 ; 
+  border-top: dotted 10px;
+  border-bottom:0;
+  border-left: 0;
+  width: 50px;
+  color: #EAF6F6;
   margin: auto;
 }
-.top-container{
+
+.top-container {
   background-color: #E4F9F5;
   position: relative;
   padding-top: 100px;
   font-size: 2rem;
   color: #66BFBF;
 }
-.bottom-container{
+
+.bottom-container {
   background-color: #66BFBF;
 }
-.profile{
+
+.profile {
   color: #40514E;
 }
-#me{
+
+.me {
   width: 12%;
   border-radius: 50%;
   border: solid 2px #66BFBF;
 }
-#top_cloud{
+
+#top_cloud {
   position: absolute;
   right: 300px;
   top: 50px;
 }
-#bottom-cloud{
+
+#bottom-cloud {
   position: absolute;
   left: 300px;
   bottom: 300px;
 }
 
-.skill-row{
+.skill-row {
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
   line-height: 2;
   color: #40514E;
 }
-.penguin{
+
+.penguin {
   width: 25%;
   float: left;
-  
 }
-.www{
+
+.www {
   width: 25%;
   float: right;
 }
-.copywrite{
+
+.copywrite {
   color: #EAF6f6;
 }
-.contact-me{
+
+.contact-me {
   margin: 1px auto 50px auto;
   line-height: 2;
 }
+
 .btn {
   -webkit-border-radius: 11;
   -moz-border-radius: 11;
